--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lucide-react": "^0.564.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-helmet-async": "^2.0.5",
+    "@dr.pogodin/react-helmet": "^3.0.6",
     "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
